Fixed some issues with Tomcat 5.5.26 whereby isHexDigit exception would appear when recording.